2010-08-11
 - QMenu for creating modules has now categories which makes it far more useful, see:
     void GraphicsScene::contextMenuEvent ( QGraphicsSceneContextMenuEvent * contextMenuEvent )
 - created all modules which are in libnoise using the class_generator.py
 - added a class_generator.py
2010-08-10
 - reorganizing modules/
 - renamed property 'pos' to 'Position'
 - removed dependancy to noise.h and -lnoise from the backend modules
   (this will be done differently soon)
2010-08-09 
 - Model::setData(..) implemented
 - Model::flags(..) implemented
 - added a new interface screenshot, see screenshots/
2010-08-07 II
 - module->property() and module->setProperty() work! *yepee*
 - fix crash when clicking QTreeView item which does not have a QGraphicsItem associated
2010-08-07
 - this is an incomplete commit, more or less a momentum of my codebase
 - the data backend does now have a DataProperty
 - the QListView was replaced by a QTreeView
 - currently some things are broken since code has to be adapted to that the new property system will be used
 - reassigned many things, see TODO
2010-08-04
 - fixed the Data* backend. now the program does not crash anymore if a Document is removed
   (this happens on program exit) but later this program might contain multiple documents at once
 - now the class Model should be able to remove:
  - either everything using delete DataRoot or
  - remove a single module or connection
2010-08-03
 - removed dump() framework from the backend
2010-08-02
 - fix Model.cpp::insertConnection|Modules to return the respective QModelIndex or an invalid QModelIndex if something went wrong
 - created an inteface to add connections via Document.cpp
2010-08-01
 - minor fixes
 - drawing of modput connections looks nicer now
 - Model.cpp::insertConnection fixed bug where a module output could be connected to the same module's input
 - adding a connection twice is not possible anymore as there is now a prevention check, see Model.cpp