@@ -1,14 +1,4 @@
 ------- current plan (near objectives): ------- 
-- using QMenu should add the module at position x,y where the QMenu was created and not where the item in the 
-  QMenu was selected. this usually results in items being inserted out of sight...
-
-
-
-
-
-
-
-
 ========================================================================
   Model related: Adding, selecting, removing of single/multiple items:
 ========================================================================
@@ -53,7 +43,7 @@ A: a list of uses:
 
 
 ========================================================================
-  QGraphicsItems mokup
+  Fixing QGraphicsItem(s) and the behaviour of the QGraphicsView:
 ========================================================================
 - QGraphicsItems should be QWidgets (for module preview) so that one can scroll the view port of a noisegen right from there.
   this would be cool as it would make editing much faster and more interactive
@@ -90,9 +80,6 @@ GraphicsView:
  - zoomin/zoomout (mwheel or +/-) and zoomfit (gui button)
  - move selected items should move the view if moved towards the border
 
-========================================================================
-  Fixing QGraphicsItem(s) and the behaviour of the QGraphicsView:
-========================================================================
 - modput needs some redesigning, see modules which use more than one modput: transformer::displace
 - also add a little 'x' button on the top right side of the module (similar to widgets)
 - scrollbars in GraphicsView are currently disabled by the resizeEvent(..) implementation, maybe
@@ -110,10 +97,7 @@ GraphicsView:
  - (the Connection looks nice already) but is tricky to select as the area is 1px
 - when selecting a GraphicsItem using a click on the respecitive QTreeView item, the item should make an animation
 - QTreeView: add tooltips
-
-
-
-
+- add icons to the QMenu for categories as well as for single modules
 
 
 ========================================================================
